# blog

./: .dockerignore  .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  README.md  conf.py  index.rst  mermaid-config.json  puppeteer-config.json  pyproject.toml
_ext/: yasfb_fix.py
_static/: custom.css  robots.txt  structured_data.js
articles/: index.rst  mistral-redhat-openshift-training.md  mistral-redhat-openshift-training.rst  openshift-ollama.rst
articles/debug/: postegresql_openshift.md  postegresql_openshift.rst
articles/defms/: index.rst
articles/k8s-nginx-ingress-sharding/: index.rst
articles/k8s-sops-secrets/: index.rst
articles/kiss-rust-server/: index.rst
articles/kubernetes-from-scratch/: 01_certificates.sh  02_kubectl.sh  03_etcd.sh  04_control-plane.sh  05_worker.sh  07_coredns.sh  08_kubevirt.sh  99_client.sh  _common.sh
articles/openshift-borg/: existing-backup-pv.yaml  existing-backup-pvc.yaml  index.rst  restore-from-backup-pod.yaml  windows-backup-cron.yaml  windows-restore-pod.yaml
articles/openshift-layer2-udn/: cluster-udn-prod.yaml  example-vm.yaml  index.rst  udn-example.yaml  udn-namespace.yaml  udn-namespaces.yaml
articles/openshift-localnet/: br-ex-network-nad.yaml  example-vm.yaml  index.rst  vlan-network-nad.yaml
articles/openshift-workstation/: index.rst
articles/openstack-bgp/: architecture.rst  bgp-basics.rst  index.rst  managing-bgp-routes.rst  troubleshooting.rst  use-cases.rst  why-frr.rst
articles/openstack_nextgen/: notes.md
articles/tools/: nvidia-to-vfio-pci.sh  skopeo_copy_image.sh  ssl_trust.sh
debug/: index.rst  openstack-ovn.rst  postgresql_openshift.rst
linux/droits-multiples-et-acl-sous-debian/: index.rst
notes/: index.rst  kubevirt-sidecar.rst  merge-kubeconfig.rst  openshift-banner.rst  podman.rst
notes/defms/: index.rst
notes/openstack-bgp/: index.rst
openshift-workstation/: index.rst
openstack-bgp/: bgp-basics.rst  intro.rst  use-cases.rst
(+14 files in other folders)
