[tool.poetry]
name = "blog-epheo-eu"
version = "0.1.0"
description = ""
authors = ["epheo <root@epheo.eu>"]
license = "GNU General Public License"
readme = "README.md"
packages = [{include = "blog"}]

[tool.poetry.dependencies]
python = "^3.11"
Sphinx = "^7.2.6"
pyaml = "^23.9.6"
furo = "^2023.9.10"
sphinx-design = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
