[tool.poetry]
name = "blog-epheo-eu"
version = "0.1.0"
description = ""
authors = ["epheo <root@epheo.eu>"]
license = "GNU General Public License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Sphinx = "^7.2.6"
pyaml = "^23.9.6"
furo = "^2023.9.10"
sphinx-design = "^0.5.0"
sphinx-sitemap = "^2.5.1"
sphinxext-opengraph = "^0.10.0"
sphinx-autobuild = "^2024.10.3"
sphinx-copybutton = "^0.5.2"
sphinx-reredirects = "^0.1.6"
sphinx-jsonschema = "^1.19.1"
readthedocs-sphinx-search = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
