[project]
name = "blog-epheo-eu"
version = "0.1.0"
description = "Personal technical blog built with Sphinx"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "epheo", email = "root@epheo.eu"},
]
license = {text = "GNU General Public License"}

dependencies = [
    "Sphinx>=7.2.6,<8.0.0",
    "pyaml>=23.9.6,<24.0.0",
    "furo>=2023.9.10,<2024.0.0",
    "sphinx-design>=0.5.0,<1.0.0",
    "sphinx-sitemap>=2.5.1,<3.0.0",
    "sphinxext-opengraph>=0.10.0,<1.0.0",
    "sphinx-autobuild>=2024.10.3,<2025.0.0",
    "sphinx-copybutton>=0.5.2,<1.0.0",
    "sphinx-reredirects>=0.1.6,<1.0.0",
    "sphinx-jsonschema>=1.19.1,<2.0.0",
    "readthedocs-sphinx-search>=0.3.2,<1.0.0",
    "sphinxcontrib-mermaid>=1.0.0,<2.0.0",
    "matplotlib>=3.10.3,<4.0.0",
]

[tool.hatch.build]
include = []